--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       <div class="calculator-body">
           <button class="general" id="clear" onclick="clearing()">AC</button>
           <button class="general" id="mark" onclick="markFunction()">+/-</button>
-          <button class="operation" id="%" onclick="operationFunction('%')">%</button>
+          <button class="general" id="%" onclick="operationFunction('%')">%</button>
           <button class="operation" id="/"  onclick="operationFunction('/')">/</button>
           <button class="number" onclick="number(7)">7</button>
           <button class="number" onclick="number(8)">8</button>
           <button class="number" onclick="number(9)">9</button>
-          <button class="operation" id="*"  onclick="operationFunction('*')">x</button>
+          <button class="operation" id="*"  onclick="operationFunction('*')">*</button>
           <button class="number" onclick="number(4)">4</button>
           <button class="number" onclick="number(5)">5</button>
           <button class="number" onclick="number(6)">6</button>
